fix wrapping

--- a/src/components/RotationMiniDisplay.scss
+++ b/src/components/RotationMiniDisplay.scss
@@ -75,6 +75,7 @@
   }
 
   .controls {
+    width: 100%;
     padding-top: 0.25em;
     display: flex;
     flex-wrap: wrap;
